# design-buddy

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  prompt_builder.py  runner.py  schemas.py
app/bot/: handlers.py  keyboards.py  setup.py
app/db/: database.py  models.py  repositories.py
app/prompts/: system.md
app/services/: chat_service.py  memory_service.py  skill_service.py  task_service.py
data/: tasks.yaml
docs/: MVP.md
docs/releases/: v0.2.0.md
tests/: conftest.py  test_mvp.py
