[project]
name = "design-buddy"
version = "0.1.0"
description = "Open-source Telegram UX/UI mentor MVP"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10,<4",
    "aiosqlite>=0.20,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "pyyaml>=6.0,<7",
    "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

